<resources>
    <string name="app_name">Smart Manager</string>
    <string name="nhac_nho">Nhắc nhở</string>
    <string name="the_loai">Thể loại</string>
    <string name="giai_tri">Giải trí</string>
    <string name="an_uong">Ăn uống</string>
    <string name="so_thich">Sở thích</string>
    <string name="giao_duc">Giáo dục</string>
    <string name="sinh_hoat">Sinh hoạt</string>
    <string name="ao_quan">Áo quần</string>
    <string name="lam_dep">Làm đẹp</string>
    <string name="khac">Khác</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chinh_sach_bao_mat">"Chính sách Bảo mật này giải thích cách xử lý thông tin được cung cấp hoặc thu thập trên các trang web mà Chính sách này được đăng trên đó. Ngoài ra, Chính sách cũng giải thích thông tin được cung cấp hoặc thu thập trong quá trình sử dụng các ứng dụng của Công ty tồn tại trên các trang web hoặc nền tảng của công ty khác. \n \n Thông qua Chính sách này, Công ty coi trọng thông tin cá nhân của người dùng như quan trọng và thông báo cho họ về mục đích và phương pháp Công ty sử dụng thông tin cá nhân do người dùng cung cấp và các biện pháp Công ty thực hiện để bảo vệ những thông tin cá nhân đó. \n \nChính sách này sẽ có hiệu lực vào ngày 1 tháng 1 năm 2021 và, trong trường hợp có sửa đổi, Công ty sẽ thông báo rộng rãi về nó thông qua đăng trên bảng thông báo của trang web của Công ty hoặc thông báo cá nhân thông qua gửi thư, fax hoặc e-mail)."</string>
    <string name="title_activity_main2">Smart Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="smart_manager_help_center">Smart Manager Help Center</string>
    <string name="money_manager_help_center_android_user_guide"><![CDATA[Money Manager Help Center > Android User Guide]]></string>
    <string name="search">Search</string>
    <string name="android_user_guide">Android User Guide</string>
    <string name="what_s_new">What\'s new</string>
    <string name="android_4_5_x_update_september_2020">Android 4.5.x Update (September 2020)</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="tat_mat_khau">Tắt mật khẩu</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="nhap_mat_khau_hien_tai">Nhập mật khẩu hiện tại</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="ten_danh_sach_cua_ban">Tên danh sách của bạn</string>
    <string name="mua_sam_cuoi_tuan_qua_cho_gia_dinh">Mua sắm cuối tuần? Quà cho gia đình?</string>
    <string name="ten_danh_sach">Tên danh sách</string>
    <string name="nhap_ten_danh_sach">Nhập tên danh sách</string>
    <string name="tao_danh_sach">Tạo danh sách</string>
    <string name="the_principles_of">The principles of “The Simple Path to Wealth” were first laid out in a series of letters by the author to his daughter. It takes on a light and casual tone in some chapters but doesn’t shy away from explanations of morre complicated topics, either. Some of these tips are:</string>
    <string name="money_is_important">Money is important</string>
    <string name="but_that_doesnt">But that doesn\'t imply constantly thinking about it</string>
    <string name="understanding_money_is_critical">Understanding money is critical</string>
    <string name="perceive_money_as_the_most_powerful_tool_you_have_to_navigate_this_complex_world">Perceive money as the most powerful tool you have to navigate this complex world.</string>
    <string name="it_can_be_a_jotous_journey">It can be a jotous journey</string>
    <string name="there_are_tools">There are tools to forge your way through with confidence and warm words.</string>
    <string name="book_the_simple_path_to_wealth">Book:\'The Simple Path to Wealth\'by J.L.Collins</string>
    <string name="inspirational_finance_books">Inspirational Finance Books</string>
    <string name="buy_this_book">BUY THIS BOOK</string>
    <string name="them_moi">Thêm mới</string>
    <string name="ten">Tên</string>
    <string name="gia">Giá</string>
    <string name="huy">Hủy</string>
    <string name="them">Thêm</string>
    <string name="ok">OK</string>
    <string name="thongbao">Thông báo</string>
    <string name="ban_chua_nhan_ten_danh_sach">Bạn chưa nhập tên danh sách</string>
    <string name="thong_bao">Thông báo</string>
    <string name="ban_co_chac_chan_muon_xoa">Bạn có chắc chắn muốn xóa</string>
    <string name="khong">Không</string>
    <string name="co">Có</string>
    <string name="mua_sam">Mua sắm</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_100000">100000</string>
    <string name="uoc_tinh">Ước tính</string>
    <string name="personal_finance_tips_for_2020">Personal Finance Tips for 2020: “The Simple Path to Wealth</string>
    <string name="find_your_road_map">Find your road map to financial independence and a rich life through simple awareness.</string>
    <string name="nhac_nho_the_loai">Thể loại</string>
    <string name="nhac_nho_chon_the_loai">Chọn thể loại</string>
    <string name="nhac_nho_ten">Tên</string>
    <string name="nhac_nho_nhap_ten">Nhập tên</string>
    <string name="nhac_nho_chu_ky">Chu kỳ</string>
    <string name="nhac_nho_chon_chu_ky">Chọn chu kỳ</string>
    <string name="nhac_nho_ngay_bat_dau">Ngày bắt đầu</string>
    <string name="nhac_nho_chon_ngay">Chọn ngày bắt đầu</string>
    <string name="nhac_nho_gio_nhac">Giờ nhắc</string>
    <string name="nhac_nho_chon_gio">Chọn giờ nhắc</string>
    <string name="nhac_nho_xoa">Xóa</string>
    <string name="nhac_nho_luu">Lưu</string>
    <string name="nhac_nho_tao">Tạo nhắc nhở</string>
    <string name="dieu_khoan_1">1. Thông tin được thu thập và phương pháp thu thập</string>
    <string name="dieu_khoan_2">2. Sử dụng thông tin thu thập được</string>
    <string name="dieu_khoan_3">3. Chia sẻ thông tin đã thu thập</string>
    <string name="dieu_khoan_4">4. Cookies, Beacons và các công nghệ tương tự</string>
    <string name="smartmanager_inc">SmartManager Inc</string>
    <string name="help_smartmanager_email">help@smartmanager.com</string>
    <string name="website">http://smartmanager.com</string>
    <string name="chinh_sach_bao_mat_button_text">Chính sách bảo mật</string>
    <string name="nhac_nho_thoi_gian_nhac">Thời gian nhắc</string>
    <string name="tao_them_nhac_nho">Tạo thêm nhắc nhở</string>
    <string name="tien_dien">Tiền điện</string>
    <string name="hang_thang">Hàng tháng</string>
    <string name="ngay12">Ngày 12</string>
    <string name="confirm_xoa">Bạn có chắc chắn muốn xóa</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="name_goal">Tên</string>
    <string name="target_goal">Số tiền mục tiêu</string>
    <string name="saved_goal">Số tiền đạt được</string>
    <string name="time_goal">Ngày kết thúc</string>
    <string name="color_goal">Màu</string>
    <string name="icon_goal">Biểu tượng</string>
    <string name="note_goal">Lưu ý</string>
    <string name="update_saved_goal">Số tiền cập nhật mới nhất</string>
    <string name="update_saved_goal_button">Thêm số tiền đạt được</string>
    <string name="complete_goal_button">Hoàn thành mục tiêu</string>
    <string name="percent_goal">60%</string>
    <string name="tao_goal_button">Tạo</string>
    <string name="tao_muctieu_goal_button">Tạo mục tiêu</string>
    <string name="visao_tietkiem">Bạn tiết kiệm vì điều gì?</string>
    <string name="another_tietkiem">Hoặc chọn</string>
    <string name="tenmuctieu_tietkiem">Tên mục tiêu</string>
    <string name="invite_moiban">Bạn thích SmartManager? Mời một người bạn để sử dụng ứng dụng tài chính tốt nhất</string>
    <string name="tell_a_friend_moiban">Tell a friend</string>
    <string name="invite_button">Invite</string>
    <string name="gioithieu">Giới thiệu với một người bạn</string>
    <string name="huy_moiban_button">Hủy</string>
    <string name="thong_ke_tien_mat">Tiền mặt</string>
    <string name="_2000000">2000000</string>
    <string name="_2021_11_30">2021-11-30</string>
    <string name="thong_ke_giai_tri">Giải trí</string>
    <string name="_97">97%</string>
    <string name="thong_ke_an_uong">Ăn uống</string>
    <string name="thong_ke_hang_thang">Hàng tháng</string>
    <string name="google_drive_sao_luu">Google Drive Sao lưu</string>
    <string name="tat">Tắt</string>
    <string name="thiet_bi">Thiết bị</string>
    <string name="thiet_lap_lai">Thiết lập lại</string>
    <string name="tat_ca_khoi_tao">Tất cả khởi tạo</string>
    <string name="chu_ky_khoi_tao">Chu kỳ khởi tạo</string>
    <string name="url">URL</string>
    <string name="https_drive_google_com">https.drive.google.com</string>
    <string name="khoi_phuc">Khôi Phục</string>
    <string name="mo_ta_gg_drive_sao_luu">Ổ đĩa Goole là nơi lưu trữ trực tuyến miễn phí từ Google hỗ trợ. Bạn có thể tự động sao lưu dữ liệu của bạn vào Google Drive. Bạn có thể khôi phục lại nó bất cứ lúc nào.</string>
    <string name="canh_bao_sao_luu_thiet_bi">Các tệp tin sao lưu được lưu trữ trong thư mục SmartManager. Các tệp tin được lưu trữ trong điện thoại của bạn, thật khó để khôi phục lại khi điện thoại của bạn bị mất, bị phá vỡ và thiết lập lại. Nếu bạn chọn mục danh sách, quá trình khôi phục bắt đầu. Trước khi khôi phục lại dữ liệu của bạn, xin vui lòng kiểm tra tên file, ngày tháng và kích cỡ.</string>
    <string name="sao_luu_du_lieu">Sao lưu dữ liệu</string>
    <string name="android_4_4_x_update_april_2020">Android 4.4.x Update (April 2020)</string>
    <string name="android_4_3_x_update_november_2019">Android 4.3.x Update (November 2019)</string>
    <string name="android_4_2_x_update_june_2019">Android 4.2.x Update (June 2019)</string>
    <string name="android_4_1_x_update_december_2018">Android 4.1.x Update (December 2018)</string>
    <string name="mo_ta">Xin chào, chúng tôi là Smart Manager. Sau bao nhiêu ngày trông đợi các tính năng mới. Chúng tôi đem đến cho bạn một tin tốt:</string>
    <string name="mo_ta_2">Chúng tôi vừa thêm chức năng Lập kế hoạch vào các chức năng của ứng dung. Nơi đây, bạn có thể tạo mới và quản lý các kế hoạch chi tiêu của mình một cách hợp lý. Hãy trải nghiệm và tẩn hưởng nó nhé!</string>
    <string name="ngay">Ngày</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="so_tien">Số tiền</string>
    <string name="xoa">Xóa</string>
    <string name="luu">Lưu</string>
    <string name="ten_hoat_dong">Tên hoạt động</string>
    <string name="so_tien_thu">Số tiền thu</string>
    <string name="so_tien_chi">Số tiền chi</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="_2050000">2050000</string>
    <string name="hint_chon_ngay">Chọn ngày</string>
    <string name="hint_chon_tai_khoan">Chọn tài khoản</string>
    <string name="hint_chon_the_loai">Chọn thể loại</string>
    <string name="hint_nhap_so_tien">Nhập số tiền</string>
    <string name="so_sanh">So sánh tháng trước</string>
    <string name="tong_chi">Tổng chi</string>
    <string name="tong_thu">Tổng thu</string>
    <string name="tien_luong">Tiền lương</string>
    <string name="tien_mat">Tiền mặt</string>
    <string name="ky_thanh_toan">Kỳ thanh toán</string>
    <string name="_01_10_2021_31_10">01.10.2021 ~ 31.10</string>
    <string name="khoan_no">Khoản nợ</string>
    <string name="cong">Cộng</string>
</resources>