<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_manager_help_center"
        android:textSize="20sp"
        android:textColor="@color/mau_dam"
        android:gravity="center"
        android:background="@drawable/textlines_khong"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_manager_help_center_android_user_guide"
        android:textColor="@color/chu_dao"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:background="@color/thay_trang"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tim_kiem"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            app:tint="@color/mau_xam"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/search"
            android:layout_weight="1"
            android:textColor="@color/mau_xam"
            android:fontFamily="@font/header3_semibold_14"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/header2_bold_20"
            android:text="@string/android_user_guide"
            android:textColor="@color/mau_dam"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_new"
            android:textColor="@color/mau_dam"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mo_ta"
            android:textSize="13sp"
            android:fontFamily="@font/body_medium_13"
            android:textColor="@color/mau_dam"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mo_ta_2"
            android:background="@drawable/textlines_khong"
            android:textSize="13sp"
            android:textStyle="bold"
            android:fontFamily="@font/body_medium_13"
            android:textColor="@color/mau_dam"/>
    </LinearLayout>
</LinearLayout>