<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/them_moi"
        android:fontFamily="@font/header2_bold_20"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/chu_dao"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.MyEditTextTheme"
        android:hint="@string/ten"
        android:layout_weight="3"
        android:fontFamily="@font/body_medium_13"/>
    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gia"
        android:theme="@style/AppTheme.MyEditTextTheme"
        android:layout_weight="2"
        android:inputType="number"
        android:fontFamily="@font/body_medium_13"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/huy"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:backgroundTint="@null"
            android:background="@drawable/button_tao"
            android:textColor="@color/mau_dam"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/them"
            android:textAllCaps="false"
            android:backgroundTint="@color/chu_dao"
            android:background="@drawable/button_tao"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>