<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10">
<TextView
    android:id="@+id/txtNhacNhoTheLoai"
    android:layout_width="100dp"
    android:layout_height="70dp"
    android:text="@string/giai_tri"
    android:layout_weight="1"
    android:layout_gravity="center_vertical"
    android:gravity="center|left"
    android:fontFamily="@font/body_medium_13"
    android:layout_marginLeft="16dp"
    android:textColor="@color/mau_xam"/>
    <LinearLayout
       android:layout_weight="6"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtNhacNhoTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tien_dien"
            android:fontFamily="@font/header2_bold_20"
            android:textColor="@color/mau_dam"/>
        <TextView
            android:id="@+id/txtNhacNhoChuKy"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hang_thang"
            android:fontFamily="@font/body_medium_13"
            android:textColor="@color/mau_xam"/>
    </LinearLayout>
    <TextView
        android:layout_weight="2"
        android:id="@+id/txtNhacNhoThoiGianNhac"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:text="@string/ngay12"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/body_medium_13"
        android:textColor="@color/thu_cap"/>
</LinearLayout>