<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_danh_sach_cua_ban"
            android:textAlignment="center"
            android:fontFamily="@font/header2_bold_20"
            android:textSize="20sp"
            android:textColor="@color/chu_dao"
            android:layout_marginTop="50sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mua_sam_cuoi_tuan_qua_cho_gia_dinh"
            android:gravity="center"
            android:fontFamily="@font/body_medium_13"
            android:textSize="13sp"
            android:textColor="@color/thu_cap"
            android:layout_marginTop="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/ten_danh_sach"
            android:fontFamily="@font/body_medium_13"
            android:textColor="@color/chu_dao"/>
        <EditText
            android:id="@+id/edtNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/nhap_ten_danh_sach"
            android:backgroundTint="@color/chu_dao"
            android:fontFamily="@font/header3_semibold_14"/>
        <Button
            android:id="@+id/btnTaoDanhSach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="39dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/header3_semibold_14"
            android:text="@string/tao_danh_sach"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>