<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thay_trang">
    <LinearLayout
        android:id="@+id/chooseGGDrive"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginRight="200dp"
            android:layout_weight="1"
            android:fontFamily="@font/body_medium_13"
            android:gravity="center"
            android:text="@string/google_drive_sao_luu"
            android:textColor="@color/mau_dam"
            android:textSize="13sp" />
        <TextView
            android:id="@+id/txtChoice"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/tat"
            android:fontFamily="@font/body_medium_13"
            android:textColor="@color/mau_dam"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/chooseThietBi"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:fontFamily="@font/body_medium_13"
            android:gravity="center"
            android:text="@string/thiet_bi"
            android:textColor="@color/mau_dam"
            android:textSize="13sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:padding="10dp"
        android:text="@string/thiet_lap_lai"
        android:fontFamily="@font/body_medium_13"
        android:textColor="@color/mau_dam"
        android:gravity="center"
        android:textSize="13sp"/>
    <LinearLayout
        android:id="@+id/chooseTatCaKhoiTao"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/tat_ca_khoi_tao"
            android:fontFamily="@font/body_medium_13"
            android:textColor="@color/mau_dam"
            android:gravity="center"
            android:textSize="13sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/chooseChuKyKhoiTao"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/chu_ky_khoi_tao"
            android:fontFamily="@font/body_medium_13"
            android:textColor="@color/mau_dam"
            android:gravity="center"
            android:textSize="13sp"/>
    </LinearLayout>
</LinearLayout>